# AS-API-Console

./: .gitignore  .semgrepignore  AGENTS.md  README.md  pyproject.toml  test_aiapi.php
backend/: .env.example  alembic.ini  as_api_console.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  (+2 more)
backend/db/: session.py
backend/scripts/: bootstrap_dast_session.py  bootstrap_test_db.py  run_api_dast.py  run_expiration_reminder.sh  run_expire_sync.sh  run_institute_sync.sh  run_usage_sync.sh  seed_test_data.py  send_expiration_reminders.py  send_test_email.py  setup_dev_db.py  sync_api_key_usage.py  sync_expired_api_keys.py  sync_institutes.py  test_persnl_connectivity.py  test_provider_connectivity.py  test_provider_key_lifecycle.py
backend/tests/: api_keys_cases.py  api_keys_test_utils.py  conftest.py  db_runtime.py  db_test_utils.py  test_announcements.py  test_api_keys.py  test_api_keys_applications.py  test_api_keys_extend_and_alias.py  test_api_keys_notifications.py  test_api_keys_queries.py  test_api_keys_renew_revoke_reveal.py  test_api_keys_unit.py  test_audit_log_queries.py  test_auth_audit_log_query.py  test_deploy_full_script.py  test_institute_sync_service.py  test_mail_config.py  test_migration_helpers.py  test_models.py  test_notifications.py  test_oauth_auth.py  test_oauth_service.py  test_openapi_contract.py  test_operation_audit_log_query.py  test_operation_audit_logs.py  test_persnl_soap_service.py  test_provider_client.py  test_sync_api_key_usage.py  test_sync_expired_api_keys_logging.py  test_user_locale_preference.py  (+1 more)
(+213 files in other folders)
