[project]
name = "as-api-console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.16.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.121.0",
    "fastapi-mail>=1.5.0",
    "httpx>=0.28.1",
    "idna>=3.15",
    "itsdangerous>=2.2.0",
    "mariadb>=1.1.14",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
